--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,13 +17,17 @@
  .nav
 {
    position: fixed;
-   top: 10px;
+   top: 20px;
+   margin-left: 20px;
+   
 }
 
  .nav-link{
      color: #fff;
      font-size: 20px;
      font-family: "Montserrat", sans-serif;
+     background-color: #ff5848;
+     
  }
 
 .callout-title {
@@ -34,4 +38,33 @@
     
  }
 
+ .about-heading{
+     font-family: "Prata", sans-serif;
+     text-align: center;
+     font-size: 63px;
+     padding-top: 20px;
+     padding-bottom: 20px;
+ }
+
+ .hotel-photo-frame{
+     background-color: #e9dfca;
+ }
+
+.hotel-image{
+    padding: 40px;
+    width: 600px;
+    
+}
+
+.about-paragraph-container{
+    font-family: "Montserrat", sans-serif;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 400;
+
+}
+
+.about-paragraph{
+    margin: 100px;
+}
  
