--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,11 +51,7 @@
      border-radius: 5px;
  }
 
- .logo{
-     z-index: 1;
-     width: 50px;
-     height: 50px;
- }
+
 
 
  /* The Overlay (background) */
@@ -115,6 +111,67 @@
     right: 35px;
   }
 } 
+
+
+ /* The Overlay (background) */
+.overlay2 {
+  /* Height & width depends on how you want to reveal the overlay (see JS below) */   
+  height: 100%;
+  width: 0;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  background-color: #e9dfca; /* Black fallback color */
+  background-color: #e9dfca; /* Black w/opacity */
+  overflow-x: hidden; /* Disable horizontal scroll */
+  transition: 1s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+}
+
+/* Position the content inside the overlay */
+.overlay2-content {
+  position: relative;
+  top: 25%; /* 25% from the top */
+  width: 100%; /* 100% width */
+  text-align: center; /* Centered text/links */
+  margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
+}
+
+/* The navigation links inside the overlay */
+.overlay2 a {
+  padding: 8px;
+  text-decoration: none;
+  font-family: "Prata", sans-serif;
+  font-size: 36px;
+  color: #fff;
+  display: block; /* Display block instead of inline */
+  transition: 0.3s; /* Transition effects on hover (color) */
+}
+
+/* When you mouse over the navigation links, change their color */
+.overlay2 a:hover, .overlay a:focus {
+  color: #f1f1f1;
+}
+
+/* Position the close button (top right corner) */
+.overlay2 .closebtn2 {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+  color: #fff;
+}
+
+/* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
+@media screen and (max-height: 450px) {
+  .overlay2 a {font-size: 20px}
+  .overlay2 .closebtn2 {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
+}
+
 
 /*-------------------about section-----------*/
 
